test/negative/705_tuple_size_mismatch.fx
// expect: type
val (a, b) = (1, 2, 3)
println(a + b)
