test/negative/705_tuple_size_mismatch.err
705_tuple_size_mismatch.fx:2:5: error: improper type of the tuple pattern

1 errors occured during type checking.
